javascript function first commit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="weatherForecast">
     <h1 id="Paragraph1"> 5 DAYS WEATHER FORECAST</h1>
     <p id="imputContainer">City: <input type="text" id="cityInput"></p>
-    <button>Click Me</button>
+    <button onclick="GetInfo()">Click Me</button>
     <h2 id="cityName">--London--</h2>
         </div>
         
@@ -52,7 +52,7 @@
     </div>
     </div>
 
-    
+    <script src="js/script.js"></script> 
 </body>
 </html>
 
